spade-tests/src/snapshots/spade_tests__ast_lowering__wildcard_is_not_allowed_in_struct_port_definition.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct port X {
    x: _
}


error: Struct member types cannot contain wildcards
  ┌─ testinput:2:8
  │
2 │     x: _
  │        ^ Wildcard in struct member type
